--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,6 +6,28 @@ on:
     # first of each month
     - cron: '0 0 1 * *'
 jobs:
+  test_with_pytest:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version:
+          - "3.6"
+          - "3.7"
+          - "3.8"
+          - "3.9"
+          - "3.10"
+    steps:
+      - uses: actions/checkout@v2.3.4
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v2
+        with:
+          python-version: ${{ matrix.python-version }}
+      - name: Install pytest
+        run: pip install pytest MarkupSafe==2.0.1
+      - name: Install package
+        run: pip install .
+      - name: Run tests
+        run: pytest test/test_skip_invalid_template.py -v
   build:
     runs-on: ubuntu-latest
     strategy:
